alignment fixes

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -252,7 +252,7 @@ label.activityPageLabel {
     border-radius: 0;
   }
   .time-1 {
-  font-size: 25px;
+  font-size: 22px;
 }
   .time-2 {
     margin-left: -172%;
@@ -316,7 +316,7 @@ label.activityPageLabel {
     margin-left: 0;
     margin-bottom: -36px;
     height: 25px;
-    padding: 0px;
+    padding: 2px;
     text-align: center;
     background: #ff6682;
     border: 0;
